@@ -1,7 +1,10 @@
 Revision history for perl distribution Mojolicious-Plugin-AssetPack
 
 1.17 Not Released
+ - Removed Mojolicious::Plugin::AssetPack::Asset::tag_helper()
+ - Add Mojolicious::Plugin::AssetPack::tag_for()
  - Add Mojolicious::Plugin::AssetPack::Asset::url_for()
+ - Add support for gif, ico, mp3, mp4, ogg, ogv, svg and webm.
 
 1.16 2016-06-29T19:05:43+0200
  - Improved documentation for store() #101
